RESOLVED FIXED277115
REGRESSION (280917@main): Crash when omitting a visibility:hidden RenderLayer from the z-order tree
https://bugs.webkit.org/show_bug.cgi?id=277115
Summary REGRESSION (280917@main): Crash when omitting a visibility:hidden RenderLayer...
Matt Woodrow
Reported 2024-07-25 19:30:47 PDT
If we decide we can newly omit a RenderLayer in the z-order tree due to not being visible, we need to also notify the compositor that these layers are 'gone' so that state can be updated correctly. <rdar://132358145>
Attachments
Matt Woodrow
Comment 1 2024-07-25 19:48:26 PDT
EWS
Comment 2 2024-07-30 21:23:19 PDT
Committed 281636@main (0d9d9b720018): <https://commits.webkit.org/281636@main> Reviewed commits have been landed. Closing PR #31259 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.