Cherry-pick 0d9d9b720018. rdar://132358145

REGRESSION (280917@main): Crash when omitting a visibility:hidden RenderLayer from the z-order tree.
    https://bugs.webkit.org/show_bug.cgi?id=277115
    <rdar://132358145>

    Reviewed by Simon Fraser.

    If we decide we can newly omit a RenderLayer in the z-order tree due to not
    being visible, we need to also notify the compositor that these layers are
    'gone' so that state can be updated correctly.

    * LayoutTests/compositing/visibility/omitted-hidden-layers-crash-expected.txt: Added.
    * LayoutTests/compositing/visibility/omitted-hidden-layers-crash.html: Added.
    * LayoutTests/compositing/visibility/omitted-hidden-layers-inserted-expected.html: Added.
    * LayoutTests/compositing/visibility/omitted-hidden-layers-inserted.html: Added.
    * Source/WebCore/rendering/RenderLayer.cpp:
    (WebCore::RenderLayer::updateNormalFlowList):
    (WebCore::RenderLayer::removeSelfAndDescendantsFromCompositor):
    (WebCore::RenderLayer::setWasOmittedFromZOrderTree):
    (WebCore::RenderLayer::collectLayers):
    (WebCore::RenderLayer::updateLayerListsIfNeeded):
    (WebCore::RenderLayer::updateDescendantDependentFlags):
    * Source/WebCore/rendering/RenderLayer.h:

    Canonical link: https://commits.webkit.org/281636@main

Canonical link: https://commits.webkit.org/280938.173@safari-7619.1.26.13-branch